[package]
name = "sparagne"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "engine", "migration", "server", "telegram_bot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
axum = "0.7.4"
axum-extra = "0.9.2"
reqwest = "0.11.26"
sea-orm = "0.12.14"
sea-orm-migration = "0.12.12"
serde = "1.0.197"
serde_derive = "1.0.195"
serde_json = "1.0.114"
teloxide = "0.12.2"
thiserror = "1.0.57"
tokio = "1.36.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.7.0"

[dependencies]
config = "0.14.0"
engine = { path = "engine" }
migration = { path = "migration" }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { workspace = true }
serde_derive = { workspace = true }
server = { path = "server" }
telegram_bot = { path = "telegram_bot" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
