[workspace]
members = [
    "crates/app",
    "crates/engine",
    "crates/migration",
    "crates/server",
    "crates/telegram_bot",
    "crates/api_types",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Workspace lints (requires a recent Cargo; align with CI Issue 16).
[workspace.lints.rust]
unsafe_code = "forbid"

# Keep Clippy baseline light for now; tighten during engine refactor.
[workspace.lints.clippy]
all = "allow"
pedantic = "allow"
nursery = "allow"
# Future tightening candidates:
# unwrap_used = "warn"
# expect_used = "warn"
# todo = "warn"
# dbg_macro = "warn"

[workspace.dependencies]
axum = "0.7.4"
axum-extra = "0.9.2"
base64 = "0.22.1"
csv = "1.3.0"
reqwest = "0.11.27"
sea-orm = "0.12.15"
sea-orm-migration = "0.12.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
teloxide = "0.12.2"
thiserror = "1.0.59"
tokio = "1.36.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.8.0"
engine = { path = "crates/engine" }
migration = { path = "crates/migration" }
server = { path = "crates/server" }
telegram_bot = { path = "crates/telegram_bot" }
api_types = { path = "crates/api_types" }
