[workspace]
members = [
    "crates/app",
    "crates/admin_cli",
    "crates/engine",
    "crates/migration",
    "crates/server",
    "crates/telegram_bot",
    "crates/api_types",
    "crates/tui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Matteo Lisotto <matteo.lisotto@gmail.com>"]
license = "MIT"
rust-version = "1.92"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Workspace lints (requires a recent Cargo; align with CI Issue 16).
[workspace.lints.rust]
unsafe_code = "forbid"

# Keep Clippy baseline light for now; tighten during engine refactor.
[workspace.lints.clippy]
all = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
dbg_macro = "warn"

[workspace.dependencies]
axum = "0.8.7"
axum-extra = "0.12.2"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
chrono = { version = "0.4.42", features = ["serde", "clock"] }
chrono-tz = "0.10.4"
config = "0.15.19"
csv = "1.4.0"
crossterm = "0.29.0"
http-body-util = "0.1.3"
reqwest = "0.12.28"
ratatui = "0.29.0"
sea-orm = "0.12.15"
sea-orm-migration = { version = "0.12.15", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
teloxide = "0.17.0"
thiserror = "2.0.17"
tokio = "1.48.0"
time = "=0.3.44"
tower = "0.5.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
uuid = "1.19.0"
engine = { path = "crates/engine" }
migration = { path = "crates/migration" }
server = { path = "crates/server" }
telegram_bot = { path = "crates/telegram_bot" }
api_types = { path = "crates/api_types" }
