[package]
name = "engine"
version = "0.0.1"
edition = "2021"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
migration = { path = "../migration" }
serde = "1.0.163"
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4", "macro-diagnostics"] }
