[package]
name = "engine"
version = "0.0.1"
edition = "2021"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
migration = { path = "../migration" }
serde = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true , features = ["v4", "macro-diagnostics"] }
