[package]
name = "engine"
version = "0.0.1"
edition = "2021"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
thiserror = { workspace = true }
uuid = { workspace = true , features = ["v4", "macro-diagnostics"] }
