[package]
name = "telegram_bot"
version = "0.0.1"
edition = "2021"

[lib]
name = "telegram_bot"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
csv = { workspace = true }
engine = { path = "../engine" }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
server = { path = "../server" }
teloxide = { workspace = true, features = ["macros", "rustls"] }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
