[package]
name = "sparagne"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
config = "0.14.0"
engine = { workspace = true }
migration = { workspace = true }
server = { workspace = true }
telegram_bot = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

