[package]
name = "sparagne"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
config = { workspace = true }
engine = { workspace = true }
migration = { workspace = true }
server = { workspace = true }
telegram_bot = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
