[package]
name = "engine"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
thiserror = { workspace = true }
uuid = { workspace = true , features = ["v4", "macro-diagnostics"] }
