[package]
name = "engine"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
thiserror = { workspace = true }
uuid = { workspace = true , features = ["v4", "macro-diagnostics"] }
