[package]
name = "engine"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }
uuid = { workspace = true , features = ["v4", "serde", "macro-diagnostics"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
migration = { workspace = true }
