[package]
name = "migration"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
workspace = true
features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls"
]
