[package]
name = "server"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
engine = { workspace = true }
api_types = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
