[package]
name = "server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
chrono = { workspace = true }
engine = { workspace = true }
api_types = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
http-body-util = { workspace = true }
migration = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
