[package]
name = "telegram_bot"
version = "0.0.1"
edition = "2021"

[lib]
name = "telegram_bot"
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
csv = { workspace = true }
engine = { workspace = true }
api_types = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
teloxide = { workspace = true, features = ["macros", "rustls"] }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
