[package]
name = "telegram_bot"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "telegram_bot"
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
engine = { workspace = true }
api_types = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
teloxide = { workspace = true, features = ["macros", "rustls"] }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
uuid = { workspace = true }
