[package]
name = "sparagne_tui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
api_types = { workspace = true }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true }
crossterm = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
engine = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
